--- a/star/Settings.apk/res/values/strings.xml
+++ b/star/Settings.apk/res/values/strings.xml
@@ -1706,8 +1706,12 @@ This affects other apps or conversations that are allowed to bubble."</string>
     <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
     <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
     <string name="character_counter_pattern">%1$d / %2$d</string>
+    <string name="charge_animation_style_lollipop">Flow</string>
+    <string name="charge_animation_style_none">Off</string>
     <string name="charge_animation_style_summary">Choose your preferred lock screen charging animation style</string>
     <string name="charge_animation_style_title">Charging animation</string>
+    <string name="charge_animation_style_video">Glow</string>
+    <string name="charge_animation_style_wave">Wave</string>
     <string name="charge_length_format">%1$s ago</string>
     <string name="charging_sounds_title">Charging sounds and vibration</string>
     <string name="check_find_device_status_failure_confirm">OK</string>
@@ -6918,6 +6922,7 @@ To use app pinning: \u0009
     <string name="secspace_fod_use_password">Enter password</string>
     <string name="secure_keyguard_business_title">Set screen lock</string>
     <string name="secure_lock_encryption_warning">Because you’ve turned on an accessibility service, your device won’t use your screen lock to enhance data encryption.</string>
+    <string name="security_center_title">Security</string>
     <string name="security_dashboard_summary">Screen lock, fingerprint</string>
     <string name="security_dashboard_summary_face">Screen lock, face unlock</string>
     <string name="security_dashboard_summary_no_fingerprint">Screen lock</string>
