--- a/star/AuthManager.apk/res/values/strings.xml
+++ b/star/AuthManager.apk/res/values/strings.xml
@@ -154,6 +154,10 @@
     <string name="blur_location_is_on_tip">%1$s uses your approximate location. Keep using it instead of precise location?</string>
     <string name="blur_location_now_tip">Approximate location is on</string>
     <string name="blur_location_title">Approximate location</string>
+    <string name="cetus_invisible_mode_notice_audio">"You're incognito. Can't use microphone now."</string>
+    <string name="cetus_invisible_mode_notice_camera">"You're incognito. Can't use camera now."</string>
+    <string name="cetus_invisible_mode_notice_location">"You're incognito. Can't use location services now."</string>
+    <string name="cetus_invisible_mode_notice_tip">Tap to turn off Incognito mode in the Settings</string>
     <string name="chinese_day_1">初一</string>
     <string name="chinese_day_10">初十</string>
     <string name="chinese_day_11">十一</string>
@@ -234,6 +238,7 @@
     <string name="clipboard_read_ai_deny_once">Restricted access to clipboard for %1$s</string>
     <string name="clipboard_read_allow_once">%1$s accessed items in the clipboard</string>
     <string name="clipboard_read_deny_dialog_title">Restricted access to clipboard for %1$s</string>
+    <string name="close">Close</string>
     <string name="current_permission_template">%1$s(%2$d/%3$d)</string>
     <string name="date_picker_label_day" />
     <string name="date_picker_label_month" />
@@ -267,10 +272,10 @@
     <string name="fmt_date_long_year_month_day">MMMM dd, yyyy</string>
     <string name="fmt_date_numeric_day">dd</string>
     <string name="fmt_date_numeric_month">MM</string>
-    <string name="fmt_date_numeric_month_day">MM/dd</string>
+    <string name="fmt_date_numeric_month_day">M/d</string>
     <string name="fmt_date_numeric_year">yyyy</string>
-    <string name="fmt_date_numeric_year_month">MM/yyyy</string>
-    <string name="fmt_date_numeric_year_month_day">MM/dd/yyyy</string>
+    <string name="fmt_date_numeric_year_month">M/yyyy</string>
+    <string name="fmt_date_numeric_year_month_day">M/d/yyyy</string>
     <string name="fmt_date_short_month">MM</string>
     <string name="fmt_date_short_month_day">MM/dd</string>
     <string name="fmt_date_short_year_month">MMM yyyy</string>
@@ -282,13 +287,13 @@
     <string name="fmt_time">T</string>
     <string name="fmt_time_12hour">hh</string>
     <string name="fmt_time_12hour_minute">hh:mm</string>
-    <string name="fmt_time_12hour_minute_pm">hh:mm aa</string>
+    <string name="fmt_time_12hour_minute_pm">hh:mm a</string>
     <string name="fmt_time_12hour_minute_second">hh:mm:ss</string>
     <string name="fmt_time_12hour_minute_second_millis">hh:mm:ss.S</string>
-    <string name="fmt_time_12hour_minute_second_millis_pm">hh:mm:ss.S aa</string>
-    <string name="fmt_time_12hour_minute_second_pm">hh:mm:ss aa</string>
-    <string name="fmt_time_12hour_pm">hh aa</string>
-    <string name="fmt_time_24hour">H</string>
+    <string name="fmt_time_12hour_minute_second_millis_pm">hh:mm:ss.S a</string>
+    <string name="fmt_time_12hour_minute_second_pm">hh:mm:ss a</string>
+    <string name="fmt_time_12hour_pm">hh a</string>
+    <string name="fmt_time_24hour">HH</string>
     <string name="fmt_time_24hour_minute">HH:mm</string>
     <string name="fmt_time_24hour_minute_second">HH:mm:s</string>
     <string name="fmt_time_24hour_minute_second_millis">HH:mm:ss.S</string>
@@ -449,8 +454,7 @@
     <string name="permission_group_title_privacy_related">Privacy</string>
     <string name="permission_group_title_sensitive_privacy_related">Sensitive permissions</string>
     <string name="permission_group_title_settings_related">Settings</string>
-    <string name="permission_list_include">"Including the following:
-"</string>
+    <string name="permission_list_include">Including the following</string>
     <string name="permission_reminders">Permission reminders</string>
     <string name="permission_warning_template">Allow %1$s to %2$s?</string>
     <string name="permission_warning_template_ask">Allow %1$s the following permissions?</string>
@@ -465,6 +469,14 @@
     <string name="screen_overlay_message">To change this permission, you have to turn off the screen overlay in Settings > Apps.</string>
     <string name="screen_overlay_title">Screen overlay detected</string>
     <string name="search_menu_title">Search</string>
+    <string name="send">Send</string>
+    <string name="size_byte">B</string>
+    <string name="size_giga_byte">GB</string>
+    <string name="size_kilo_byte">KB</string>
+    <string name="size_mega_byte">MB</string>
+    <string name="size_peta_byte">PB</string>
+    <string name="size_suffix">%1$s%2$s</string>
+    <string name="size_tera_byte">TB</string>
     <string name="solar_term_autumn_begins">Autumn begins</string>
     <string name="solar_term_autumn_equinox">Autumn equinox</string>
     <string name="solar_term_clear_and_bright">Clear and bright</string>
