--- a/star/Settings.apk/res/values/strings.xml
+++ b/star/Settings.apk/res/values/strings.xml
@@ -3536,6 +3536,7 @@ When you turn on automatic backup, device and app data is periodically saved rem
     <string name="gxzw_anim_rhythm">Rhythm</string>
     <string name="gxzw_anim_star">Starlight</string>
     <string name="gxzw_anim_title">Fingerprint animation</string>
+    <string name="gxzw_anim_unlock_effect">%s fingerprint animation</string>
     <string name="gxzw_aod_show_summary">Raise the device or tap the screen to make the fingerprint icon appear. This feature increases system power consumption.</string>
     <string name="gxzw_aod_show_tittle">Show fingerprint icon when the screen is off</string>
     <string name="gxzw_dialog_message">"To be able to use in-screen fingerprint sensor normally, don't use screen protectors. If you think that a screen protector is still necessary, choose among authorized compatible options."</string>
@@ -3978,6 +3979,12 @@ Open Xiaomi Cloud and restore items from there."</string>
     <string name="item_system_app">System apps</string>
     <string name="join_two_items">%1$s and %2$s</string>
     <string name="join_two_unrelated_items">%1$s, %2$s</string>
+    <string name="kddi_nfc_category_title">NFC/Osaifu-keitai</string>
+    <string name="kddi_nfc_disabled_summary">Unavailable because NFC/Osaifu-keitai is turned off</string>
+    <string name="kddi_nfc_quick_toggle_summary">Enable NFC/Osaifu-keitai function</string>
+    <string name="kddi_nfc_quick_toggle_title">NFC/Osaifu-keitai</string>
+    <string name="kddi_nfc_secure_settings_title">Lock while on lock screen</string>
+    <string name="kddi_nfc_secure_toggle_summary">Allow NFC/Osaifu-keitai function while the screen is unlocked</string>
     <string name="keep_legacy_fingerprint">Keep</string>
     <string name="keep_screen_on">"Don't lock screen"</string>
     <string name="keep_screen_on_summary">"Screen won't go to sleep while charging"</string>
@@ -4569,7 +4576,8 @@ as your First space PIN."</string>
     <string name="low_label">Low</string>
     <string name="low_storage_summary">Storage is low. %1$s used - %2$s free</string>
     <string name="macaddr_label">MAC addr:</string>
-    <string name="magic_window_name">Parallel windows</string>
+    <string name="magic_list_empty_text">No apps compatible with this feature now</string>
+    <string name="magic_window_name">Optimize apps for landscape view</string>
     <string name="mah">%d mAh</string>
     <string name="main_netcheck_summary">Test connection for networking issues</string>
     <string name="main_running_process_description">Main process in use.</string>
@@ -5696,6 +5704,35 @@ OTG turns off automatically after 10 minutes of inactivity."</string>
     <string name="owner_info_settings_title">Lock screen signature</string>
     <string name="owner_space">First space</string>
     <string name="packages_subtitle">Included packages</string>
+    <string name="pad_backup_summary">Back up and restore items on this device</string>
+    <string name="pad_backup_title">Mobile device</string>
+    <string name="pad_computer_backup_summary">Back up and restore items using a computer</string>
+    <string name="pad_how_backup_content">"You can save backups locally or to the cloud. Local backups can be stored on your mobile device, computer, or USB drive.
+
+Mobile device
+Save your system settings, accounts, app data, and other items in a separate file stored on your device (MIUI-backup-AllBackup). Note: Performing a factory reset will delete such backups permanently. Remember to copy backups to your computer.
+
+Computer
+Create a backup on this device, then go to MIUI-backup-AllBackup and copy the backup to your computer via USB cable.
+
+USB drive
+Save your system settings, accounts, app data, and other items to a USB drive.
+
+Xiaomi Cloud
+Sync your contacts, photos, videos, the list of your apps, system settings, and Home screen layout with the cloud."</string>
+    <string name="pad_how_restore_backup_content">"Here's how you can restore items that were backed up using different methods:
+
+Mobile device
+Tap \"Mobile device\" find the option to restore items and select the backup to continue.
+
+Computer
+Copy the backup from your computer to MIUI-backup-AllBackup via USB cable and restore items from your mobile device.
+
+USB drive
+Copy the backup from your USB drive to MIUI-backup-AllBackup and select the option to restore items from a USB drive to continue.
+
+Xiaomi Cloud
+Open Xiaomi Cloud and restore items from there."</string>
     <string name="page_layout_1">Sunday, August 16</string>
     <string name="page_layout_10">Settings</string>
     <string name="page_layout_11">Weather</string>
@@ -6372,6 +6409,7 @@ Restart your device and try again."</string>
     <string name="reset_network_final_desc">"Reset all network settings now? This might take several seconds. You won't be able to undo this action."</string>
     <string name="reset_network_final_desc_esim">Reset all network settings and erase downloaded SIMs? You can’t undo this action.</string>
     <string name="reset_network_title">Reset Wi-Fi, mobile networks, and Bluetooth</string>
+    <string name="reset_network_title_noSim">Reset Wi-Fi and Bluetooth</string>
     <string name="reset_network_wifi">Wi-Fi</string>
     <string name="reset_remove_data_hint">All the items listed above will be erased permanently. Back up all important items to your computer or Xiaomi Cloud before you continue.</string>
     <string name="reset_second_space_passwd">Reset Second space password</string>
